# domaker

./: Cargo.toml
base/: Cargo.toml
base/src/: location.rs  source.rs
codegen/: Cargo.toml
examples/: syntax.dmk
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  grammar.lalrpop  lib.rs  parser.rs  spec.lalrpop  spec.rs
parser/src/ast/: schema.rs  types.rs
src/: main.rs
transpiler/: Cargo.toml
transpiler/src/: ir.rs  lib.rs  transpiler.rs
transpiler/src/transpiler/: error.rs
